# recommendation_system

./: .env-sample  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
config/: settings.py  urls.py
fixtures/: films.json
nginx/: Dockerfile  nginx.conf
recommendation_system/: admin.py  models.py  serializers.py  services.py  tests.py  urls.py  views.py
recommendation_system/management/commands/: create_genre.py
recommendation_system/migrations/: 0001_initial.py  0002_film_image.py  0003_recommendationstatistics.py
recommendation_system/templates/recommendation_system/: film.html  home.html  preference_user.html  recommendation_film.html  statistics.html
recommendation_system/templates/recommendation_system/includes/: basic_design.html  header_menu.html
users/: admin.py  forms.py  models.py  permissions.py  serializers.py  services.py  tests.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_user_city_user_country_user_name.py  0003_alter_user_username.py  0004_user_avatar.py
users/templates/users/: login.html  profile_user.html  register.html
